# bill_format

./: .gitignore  config.py  confirm_records.py  constants.py  data_source.py  db_utils.py  main.py  process_bill.py  pyproject.toml  query_data_by_rag.py  requirements.txt  todolist  train.py  utils.py
